crates/rome_js_formatter/tests/specs/prettier/js/record/record.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\record\\record.js"
---

# Input

```js
const record1 = #{
    a: 1,
    b: 2,
    c: 3,
};

const record2 = #{...record1, b: 5};

assert(record1.a === 1);
assert(record1["a"] === 1);
assert(record1 !== record2);
assert(record2 === #{ a: 1, c: 3, b: 5 });
assert(record1?.a === 1);
assert(record1?.d === undefined);
assert(record1?.d ?? 5 === 5);
assert(record1.d?.a === undefined);
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,10 +1,14 @@
-const record1 = #{
-  a: 1,
-  b: 2,
-  c: 3,
-};
+const record1 = #;
+{
+  a: 1, b;
+  : 2,
+    c: 3,
+}
 
-const record2 = #{ ...record1, b: 5 };
+const record2 = #;
+{
+  ...record1, b: 5
+}
 
 assert(record1.a === 1);
 assert(record1["a"] === 1);
```

# Output

```js
const record1 = #;
{
  a: 1, b;
  : 2,
    c: 3,
}

const record2 = #;
{
  ...record1, b: 5
}

assert(record1.a === 1);
assert(record1["a"] === 1);
assert(record1 !== record2);
assert(record2 === #{ a: 1, c: 3, b: 5 });
assert(record1?.a === 1);
assert(record1?.d === undefined);
assert(record1?.d ?? 5 === 5);
assert(record1.d?.a === undefined);
```


# Errors
```
record.js:1:18 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an identifier but instead found '{'
  
  × Expected an identifier here
  
    ┌─ record.js:1:18
    │
  1 │ const record1 = #{
    │                  ^
  
record.js:1:17 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Private names are only allowed on the left side of a 'in' expression
  
    ┌─ record.js:1:17
    │
  1 │ const record1 = #{
    │                 ^
  
record.js:1:18 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ record.js:1:18
    │
  1 │ const record1 = #{
    │                  ^
  
  i ...Which is required to end this statement
  
    ┌─ record.js:1:1
    │
  1 │ const record1 = #{
    │ ^^^^^^^^^^^^^^^^^
  
record.js:3:6 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ record.js:3:6
    │
  3 │     b: 2,
    │      ^
  
  i ...Which is required to end this statement
  
    ┌─ record.js:2:8
    │  
  2 │       a: 1,
    │ ┌────────^
  3 │ │     b: 2,
    │ └──────^
  
record.js:7:18 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an identifier but instead found '{'
  
  × Expected an identifier here
  
    ┌─ record.js:7:18
    │
  7 │ const record2 = #{...record1, b: 5};
    │                  ^
  
record.js:7:17 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Private names are only allowed on the left side of a 'in' expression
  
    ┌─ record.js:7:17
    │
  7 │ const record2 = #{...record1, b: 5};
    │                 ^
  
record.js:7:18 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ record.js:7:18
    │
  7 │ const record2 = #{...record1, b: 5};
    │                  ^
  
  i ...Which is required to end this statement
  
    ┌─ record.js:7:1
    │
  7 │ const record2 = #{...record1, b: 5};
    │ ^^^^^^^^^^^^^^^^^
  
record.js:7:19 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an expression but instead found '...record1, b: 5'
  
  × Expected an expression here
  
    ┌─ record.js:7:19
    │
  7 │ const record2 = #{...record1, b: 5};
    │                   ^^^^^^^^^^^^^^^^
  
record.js:12:21 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an identifier but instead found '{'
  
  × Expected an identifier here
  
     ┌─ record.js:12:21
     │
  12 │ assert(record2 === #{ a: 1, c: 3, b: 5 });
     │                     ^
  
record.js:12:20 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Private names are only allowed on the left side of a 'in' expression
  
     ┌─ record.js:12:20
     │
  12 │ assert(record2 === #{ a: 1, c: 3, b: 5 });
     │                    ^
  
record.js:12:21 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `,` but instead found `{`
  
  × unexpected
  
     ┌─ record.js:12:21
     │
  12 │ assert(record2 === #{ a: 1, c: 3, b: 5 });
     │                     ^
  

```


